Lots of things shifted. Get SOMETHING displaying