@@ -3,7 +3,7 @@ import java.nio.file.Paths
 plugins {
     id 'java'
     id 'application'
-    id "edu.wpi.first.GradleRIO" version "2023.3.1"
+    id "edu.wpi.first.GradleRIO" version "2024.1.1"
 }
 
 def targetConfiguration = "camera";
@@ -70,7 +70,7 @@ tasks.withType(JavaExec) {
 
 repositories {
     maven {
-        url 'file:///C:/Users/Public/wpilib/2023/maven'
+        url 'file:///C:/Users/Public/wpilib/2024/maven'
     }
     mavenLocal()
     mavenCentral()
@@ -80,10 +80,10 @@ repositories {
 }
 
 def files = [
-        "C:\\Users\\Public\\wpilib\\2023\\maven\\edu\\wpi\\first\\ntcore\\ntcore-cpp\\2023.3.2\\ntcore-cpp-2023.3.2-windowsx86-64.zip",
-        "C:\\Users\\Public\\wpilib\\2023\\maven\\edu\\wpi\\first\\wpinet\\wpinet-cpp\\2023.3.2\\wpinet-cpp-2023.3.2-windowsx86-64.zip",
-        "C:\\Users\\Public\\wpilib\\2023\\maven\\edu\\wpi\\first\\wpiutil\\wpiutil-cpp\\2023.3.2\\wpiutil-cpp-2023.3.2-windowsx86-64.zip",
-        "C:\\Users\\Public\\wpilib\\2023\\maven\\edu\\wpi\\first\\thirdparty\\frc2023\\opencv\\opencv-cpp\\4.6.0-4\\opencv-cpp-4.6.0-4-windowsx86-64.zip"
+        "C:\\Users\\Public\\wpilib\\2024\\maven\\edu\\wpi\\first\\ntcore\\ntcore-cpp\\2024.1.1\\ntcore-cpp-2024.1.1-windowsx86-64.zip",
+        "C:\\Users\\Public\\wpilib\\2024\\maven\\edu\\wpi\\first\\wpinet\\wpinet-cpp\\2024.1.1\\wpinet-cpp-2024.1.1-windowsx86-64.zip",
+        "C:\\Users\\Public\\wpilib\\2024\\maven\\edu\\wpi\\first\\wpiutil\\wpiutil-cpp\\2024.1.1\\wpiutil-cpp-2024.1.1-windowsx86-64.zip",
+        "C:\\Users\\Public\\wpilib\\2024\\maven\\edu\\wpi\\first\\thirdparty\\frc2024\\opencv\\opencv-cpp\\4.8.0-2\\opencv-cpp-4.8.0-2-windowsx86-64.zip"
 ]
 
 task extractDeps {
@@ -104,6 +104,8 @@ task extractDeps {
 run {
     dependsOn tasks.extractDeps
     dependsOn tasks.build
+
+    jvmArgs += ["--add-opens", "java.base/java.nio=ALL-UNNAMED"]
 
     classpath = sourceSets.main.runtimeClasspath
     main = "org.usfirst.frc.team2077.startup.Startup"
